[gd_scene load_steps=39 format=3 uid="uid://djxutphtxguqu"]

[ext_resource type="Texture2D" uid="uid://crnt2cbd5ugs4" path="res://Sprites/Fight Button.png" id="1_bldvy"]
[ext_resource type="Script" path="res://Scenes/MainMenuManager.gd" id="1_dv1vn"]
[ext_resource type="WwiseEvent" uid="uid://cpr0wioowckq4" path="res://Wwise/resources/Event/{D6462897-2C40-4977-99CB-6646837146EC}.tres" id="2_15tm8"]
[ext_resource type="Texture2D" uid="uid://c8568cr5vkjks" path="res://Sprites/Fight Button - Hovering.png" id="2_qphe6"]
[ext_resource type="WwiseRTPC" uid="uid://b1110dfm3u7wd" path="res://Wwise/resources/Game Parameter/{82E3C3AE-56DA-41DF-963C-1A1DBA83AAE8}.tres" id="3_5vsrh"]
[ext_resource type="WwiseEvent" uid="uid://ci44jqc350deh" path="res://Wwise/resources/Event/{F8C8C01E-A828-41EF-B44E-377E88BCFDA6}.tres" id="3_e4rq7"]
[ext_resource type="Texture2D" uid="uid://bfxf8hf33h5xk" path="res://Sprites/Deck Button.png" id="3_xxews"]
[ext_resource type="Texture2D" uid="uid://bn403qk0tf7qe" path="res://Sprites/Deck Button-Hovering.png" id="4_tblqs"]
[ext_resource type="WwiseRTPC" uid="uid://88bb55ndampu" path="res://Wwise/resources/Game Parameter/{4FD7F60C-10A7-4A9F-B832-ADF4E4BF77E1}.tres" id="5_nowcf"]
[ext_resource type="Texture2D" uid="uid://b40n4lbsqkhqr" path="res://Sprites/Back-Button.png" id="5_pqi47"]
[ext_resource type="PackedScene" uid="uid://kyiycgefeqw6" path="res://Prefabs/UI Prefabs/character_select_button.tscn" id="7_fbbau"]
[ext_resource type="Script" path="res://Scenes/enemy_select_menu.gd" id="7_fi60y"]
[ext_resource type="Texture2D" uid="uid://bts2vo7c7i8ar" path="res://Sprites/Play.png" id="7_xf3tk"]
[ext_resource type="Texture2D" uid="uid://bmmikj7swk5ls" path="res://Sprites/Settings.png" id="8_5pmcr"]
[ext_resource type="Script" path="res://Characters/CharacterTemplate.gd" id="8_imjai"]
[ext_resource type="Resource" uid="uid://bu7u8pkobijiy" path="res://Characters/Bomba.tres" id="8_r5t2j"]
[ext_resource type="Script" path="res://Scripts/UI Script/main_menu_button.gd" id="8_xbm44"]
[ext_resource type="Resource" uid="uid://cww52qnsl656k" path="res://Characters/Balla.tres" id="9_komr2"]
[ext_resource type="Texture2D" uid="uid://yk0swesin31y" path="res://Sprites/Quit.png" id="9_qcfsh"]
[ext_resource type="Resource" uid="uid://x6aeaa7yrqw7" path="res://Characters/EggMage.tres" id="11_btj0c"]
[ext_resource type="Texture2D" uid="uid://why4j78o0ygw" path="res://Sprites/white-square-32x32.png" id="12_abw1p"]
[ext_resource type="Script" path="res://Scenes/TitleAnimationStarter.gd" id="13_n52ai"]
[ext_resource type="SpriteFrames" uid="uid://bpbgijwrwa1iq" path="res://Sprites/Character Sprites/Lil Mole.tres" id="13_q5nw8"]
[ext_resource type="Script" path="res://Scenes/sprite_funny.gd" id="14_6gr6b"]
[ext_resource type="Texture2D" uid="uid://d181tckqwqt4d" path="res://Sprites/Icons/Health Icon.png" id="14_dwyu2"]
[ext_resource type="Texture2D" uid="uid://bcu7awof8ab0g" path="res://Sprites/Credits.png" id="14_og54s"]
[ext_resource type="Texture2D" uid="uid://blaavtlc76mnc" path="res://Sprites/Icons/AP_Icon.png" id="15_ftamg"]
[ext_resource type="Shader" path="res://Shaders/scrollBG.gdshader" id="19_mqyjr"]
[ext_resource type="Texture2D" uid="uid://bluuwcnjknyl8" path="res://Sprites/Background Ballas.png" id="20_vq222"]
[ext_resource type="WwiseBank" uid="uid://cslhmf20pf65p" path="res://Wwise/resources/SoundBank/{943A638A-6E86-455C-89F3-000BD676973B}.tres" id="21_gs4jw"]
[ext_resource type="Texture2D" uid="uid://cd1xp2hgj86h8" path="res://Sprites/Balla Battle text.png" id="28_yivo6"]
[ext_resource type="Script" path="res://Scripts/Bonus Scripts/CreditsSprite.gd" id="31_hvfd8"]
[ext_resource type="SpriteFrames" uid="uid://6bo620acgp5j" path="res://Sprites/Character Sprites/Fishy Biz.tres" id="32_eclqp"]
[ext_resource type="SpriteFrames" uid="uid://denmt5mm7yv0t" path="res://Sprites/BallaGames.tres" id="34_qyufk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yaa46"]
shader = ExtResource("19_mqyjr")
shader_parameter/scroll_speed = 0.1

[sub_resource type="Animation" id="Animation_jbsx0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.385773]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.904)]
}

[sub_resource type="Animation" id="Animation_kjrhe"]
resource_name = "TitleText"
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.475, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.385773, 0.224567, -0.385773]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.904), Vector2(1.2, 1.085), Vector2(1, 0.904)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iaw31"]
_data = {
"RESET": SubResource("Animation_jbsx0"),
"TitleText": SubResource("Animation_kjrhe")
}

[node name="MainMenu" type="Node2D" node_paths=PackedStringArray("title_menu", "game_mode_screen", "enemy_select_menu", "settings_menu", "credits_menu")]
position = Vector2(-1, 0)
script = ExtResource("1_dv1vn")
title_menu = NodePath("TitleMenu")
game_mode_screen = NodePath("Gameplay Select Screen")
enemy_select_menu = NodePath("EnemySelectMenu")
settings_menu = NodePath("Settings Menu")
credits_menu = NodePath("Credits Menu")
starter_cards = Array[String](["res://Cards/Attack Cards/MoleMallet.tres", "res://Cards/Attack Cards/Punch.tres", "res://Cards/Shield Cards/NuhUh.tres", "res://Cards/Heal Cards/JamJar.tres"])
music_event = ExtResource("2_15tm8")
music_stop = ExtResource("3_e4rq7")
combat_volume = ExtResource("3_5vsrh")
master_volume = ExtResource("5_nowcf")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.70333, 0.292784, 9.62615e-08, 1)
z_index = -1
texture_repeat = 2
material = SubResource("ShaderMaterial_yaa46")
offset_right = 578.0
offset_bottom = 324.0
texture = ExtResource("20_vq222")

[node name="TitleMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Play Button" type="TextureButton" parent="TitleMenu"]
layout_mode = 0
offset_left = 223.0
offset_top = 127.0
offset_right = 371.0
offset_bottom = 202.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(64, 37)
texture_normal = ExtResource("7_xf3tk")
script = ExtResource("8_xbm44")

[node name="Shadow" type="Sprite2D" parent="TitleMenu/Play Button"]
modulate = Color(0, 0, 0, 0.576471)
z_index = -1
position = Vector2(72.5, 40)
texture = ExtResource("7_xf3tk")

[node name="Settings Button" type="TextureButton" parent="TitleMenu"]
layout_mode = 0
offset_left = 178.0
offset_top = 191.0
offset_right = 413.0
offset_bottom = 260.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(117, 34)
texture_normal = ExtResource("8_5pmcr")
script = ExtResource("8_xbm44")

[node name="Shadow" type="Sprite2D" parent="TitleMenu/Settings Button"]
modulate = Color(0, 0, 0, 0.576471)
z_index = -1
position = Vector2(122.5, 41.25)
texture = ExtResource("8_5pmcr")

[node name="Quit Button" type="TextureButton" parent="TitleMenu"]
layout_mode = 0
offset_left = 217.0
offset_top = 249.0
offset_right = 367.0
offset_bottom = 313.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(75, 32)
texture_normal = ExtResource("9_qcfsh")
script = ExtResource("8_xbm44")

[node name="Shadow" type="Sprite2D" parent="TitleMenu/Quit Button"]
modulate = Color(0, 0, 0, 0.576471)
z_index = -1
position = Vector2(78.75, 36.25)
texture = ExtResource("9_qcfsh")

[node name="BallaBattleText" type="Sprite2D" parent="TitleMenu"]
position = Vector2(279, 80)
rotation = -0.385773
scale = Vector2(1, 0.904)
texture = ExtResource("28_yivo6")

[node name="BallaBattleText2" type="Sprite2D" parent="TitleMenu/BallaBattleText"]
modulate = Color(0, 0, 0, 0.533333)
z_index = -1
position = Vector2(6.39145, 2.65095)
texture = ExtResource("28_yivo6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleMenu/BallaBattleText"]
libraries = {
"": SubResource("AnimationLibrary_iaw31")
}
script = ExtResource("13_n52ai")

[node name="Gameplay Select Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 575.0
offset_bottom = 322.0

[node name="Fight Button" type="TextureButton" parent="Gameplay Select Screen"]
layout_mode = 0
offset_left = 34.0
offset_top = 46.0
offset_right = 260.0
offset_bottom = 268.0
pivot_offset = Vector2(128, 128)
texture_normal = ExtResource("2_qphe6")
texture_hover = ExtResource("1_bldvy")
script = ExtResource("8_xbm44")

[node name="Deck Button" type="TextureButton" parent="Gameplay Select Screen"]
layout_mode = 0
offset_left = 299.0
offset_top = 46.0
offset_right = 525.0
offset_bottom = 268.0
pivot_offset = Vector2(128, 128)
texture_normal = ExtResource("4_tblqs")
texture_hover = ExtResource("3_xxews")
script = ExtResource("8_xbm44")

[node name="Back Button" type="TextureButton" parent="Gameplay Select Screen"]
layout_mode = 0
offset_left = 1.0
offset_top = 6.0
offset_right = 56.0
offset_bottom = 60.0
pivot_offset = Vector2(27, 27)
texture_normal = ExtResource("5_pqi47")
script = ExtResource("8_xbm44")

[node name="EnemySelectMenu" type="Control" parent="." node_paths=PackedStringArray("menu_panel", "sprite", "health_text", "ap_text")]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 57.0
offset_top = 30.0
offset_right = 307.0
offset_bottom = 353.0
script = ExtResource("7_fi60y")
enemies = Array[ExtResource("8_imjai")]([ExtResource("9_komr2"), ExtResource("8_r5t2j"), ExtResource("11_btj0c")])
button_prefab = ExtResource("7_fbbau")
menu_panel = NodePath("VBoxContainer")
sprite = NodePath("Enemy Panel/AnimatedSprite2D")
health_text = NodePath("Enemy Panel/HealthText")
ap_text = NodePath("Enemy Panel/APText")

[node name="Sprite2D" type="Sprite2D" parent="EnemySelectMenu"]
modulate = Color(0, 0, 0, 0.562)
position = Vector2(69, 131)
scale = Vector2(7.8125, 10.1875)
texture = ExtResource("12_abw1p")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemySelectMenu"]
layout_mode = 0
offset_left = -11.0
offset_top = 55.0
offset_right = 143.0
offset_bottom = 374.0

[node name="EnemyMenu-BackButton" type="TextureButton" parent="EnemySelectMenu"]
layout_mode = 0
offset_left = 450.0
offset_top = -23.0
offset_right = 505.0
offset_bottom = 31.0
texture_normal = ExtResource("5_pqi47")

[node name="RichTextLabel" type="RichTextLabel" parent="EnemySelectMenu"]
layout_mode = 0
offset_left = 5.0
offset_top = -16.0
offset_right = 142.0
offset_bottom = 30.0
text = "Choose Your "

[node name="RichTextLabel2" type="RichTextLabel" parent="EnemySelectMenu"]
layout_mode = 0
offset_left = -20.0
offset_top = -8.0
offset_right = 162.0
offset_bottom = 36.0
theme_override_font_sizes/normal_font_size = 30
text = "Opponent"

[node name="Enemy Panel" type="Control" parent="EnemySelectMenu"]
anchors_preset = 0
offset_left = 233.0
offset_top = -2.0
offset_right = 470.0
offset_bottom = 251.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="EnemySelectMenu/Enemy Panel"]
position = Vector2(148, 130)
sprite_frames = ExtResource("13_q5nw8")
script = ExtResource("14_6gr6b")

[node name="HealthIcon" type="Sprite2D" parent="EnemySelectMenu/Enemy Panel"]
position = Vector2(92.25, 193.25)
scale = Vector2(1.83333, 1.83333)
texture = ExtResource("14_dwyu2")

[node name="Sprite2D" type="Sprite2D" parent="EnemySelectMenu/Enemy Panel"]
position = Vector2(175, 192)
scale = Vector2(1.63333, 1.63333)
texture = ExtResource("15_ftamg")

[node name="HealthText" type="RichTextLabel" parent="EnemySelectMenu/Enemy Panel"]
layout_mode = 0
offset_left = 106.0
offset_top = 181.0
offset_right = 146.0
offset_bottom = 221.0
text = ":100"

[node name="APText" type="RichTextLabel" parent="EnemySelectMenu/Enemy Panel"]
layout_mode = 0
offset_left = 189.0
offset_top = 181.0
offset_right = 229.0
offset_bottom = 221.0
text = ":25
"

[node name="Spritebox" type="Control" parent="EnemySelectMenu/Enemy Panel"]
anchors_preset = 0
offset_left = 110.0
offset_top = 93.0
offset_right = 189.0
offset_bottom = 162.0

[node name="Settings Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 573.0
offset_bottom = 325.0

[node name="RichTextLabel" type="RichTextLabel" parent="Settings Menu"]
layout_mode = 0
offset_left = 26.0
offset_top = 54.0
offset_right = 285.0
offset_bottom = 176.0
theme_override_font_sizes/normal_font_size = 28
text = "Master Volume"

[node name="SettingsBackButton" type="TextureButton" parent="Settings Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("5_pqi47")
script = ExtResource("8_xbm44")

[node name="HSlider" type="HSlider" parent="Settings Menu"]
layout_mode = 0
offset_left = 31.0
offset_top = 89.0
offset_right = 246.0
offset_bottom = 105.0
value = 100.0

[node name="Credits Button" type="TextureButton" parent="Settings Menu"]
layout_mode = 0
offset_left = 4.0
offset_top = 251.0
offset_right = 239.0
offset_bottom = 320.0
pivot_offset = Vector2(117, 34)
texture_normal = ExtResource("14_og54s")
script = ExtResource("8_xbm44")

[node name="Sprite2D" type="Sprite2D" parent="Settings Menu/Credits Button"]
modulate = Color(0, 0, 0, 0.286275)
z_index = -1
position = Vector2(124.991, 38.8573)
texture = ExtResource("14_og54s")

[node name="AkBank" type="AkBank" parent="."]
bank = ExtResource("21_gs4jw")
load_on = 1

[node name="AkListener2D" type="AkListener2D" parent="."]
position = Vector2(1, 0)

[node name="Credits Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 45.0
offset_top = 68.0
offset_right = 212.0
offset_bottom = 124.0
theme_override_font_sizes/normal_font_size = 21
text = "A Game Made by"

[node name="RichTextLabel2" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 8.0
offset_top = 90.0
offset_right = 226.0
offset_bottom = 146.0
theme_override_font_sizes/normal_font_size = 42
text = "DYLAN MATHER"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Credits Menu"]
position = Vector2(101, 200)
sprite_frames = ExtResource("32_eclqp")
script = ExtResource("31_hvfd8")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Credits Menu"]
position = Vector2(277, 178)
sprite_frames = ExtResource("34_qyufk")
script = ExtResource("31_hvfd8")

[node name="RichTextLabel3" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 266.0
offset_top = 88.0
offset_right = 306.0
offset_bottom = 128.0
theme_override_font_sizes/normal_font_size = 28
text = "A"

[node name="RichTextLabel4" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 223.0
offset_top = 223.0
offset_right = 357.0
offset_bottom = 297.0
theme_override_font_sizes/normal_font_size = 28
text = "Production"

[node name="Sprite2D" type="Sprite2D" parent="Credits Menu"]
modulate = Color(0, 0, 0, 0.431373)
position = Vector2(468, 164)
scale = Vector2(7.9375, 11.375)
texture = ExtResource("12_abw1p")

[node name="RichTextLabel5" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 402.0
offset_top = 12.0
offset_right = 620.0
offset_bottom = 68.0
theme_override_font_sizes/normal_font_size = 42
text = "CREDITS"

[node name="RichTextLabel6" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 361.0
offset_top = 62.0
offset_right = 528.0
offset_bottom = 118.0
theme_override_font_sizes/normal_font_size = 21
text = "Sound Effects"

[node name="RichTextLabel8" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 359.0
offset_top = 160.0
offset_right = 553.0
offset_bottom = 254.0
theme_override_font_sizes/normal_font_size = 21
text = "Plugins
Wwise Godot Integration - Allesandro Fama"

[node name="RichTextLabel7" type="RichTextLabel" parent="Credits Menu"]
layout_mode = 0
offset_left = 361.0
offset_top = 78.0
offset_right = 528.0
offset_bottom = 134.0
theme_override_font_sizes/normal_font_size = 21
text = "CGFX
Team Shanghai Alice"

[node name="BackButton" type="TextureButton" parent="Credits Menu"]
layout_mode = 0
offset_left = 521.0
offset_top = 3.0
offset_right = 576.0
offset_bottom = 57.0
pivot_offset = Vector2(27, 26)
texture_normal = ExtResource("5_pqi47")
script = ExtResource("8_xbm44")

[connection signal="mouse_entered" from="TitleMenu/Play Button" to="TitleMenu/Play Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TitleMenu/Play Button" to="TitleMenu/Play Button" method="_on_mouse_exited"]
[connection signal="pressed" from="TitleMenu/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="button_down" from="TitleMenu/Settings Button" to="." method="_on_settings_button_button_down"]
[connection signal="mouse_entered" from="TitleMenu/Settings Button" to="TitleMenu/Settings Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TitleMenu/Settings Button" to="TitleMenu/Settings Button" method="_on_mouse_exited"]
[connection signal="pressed" from="TitleMenu/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="TitleMenu/Quit Button" to="TitleMenu/Quit Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TitleMenu/Quit Button" to="TitleMenu/Quit Button" method="_on_mouse_exited"]
[connection signal="pressed" from="TitleMenu/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="Gameplay Select Screen/Fight Button" to="Gameplay Select Screen/Fight Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Gameplay Select Screen/Fight Button" to="Gameplay Select Screen/Fight Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Gameplay Select Screen/Fight Button" to="." method="_on_fight_button_pressed"]
[connection signal="mouse_entered" from="Gameplay Select Screen/Deck Button" to="Gameplay Select Screen/Deck Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Gameplay Select Screen/Deck Button" to="Gameplay Select Screen/Deck Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Gameplay Select Screen/Deck Button" to="." method="_on_deck_button_pressed"]
[connection signal="button_down" from="Gameplay Select Screen/Back Button" to="." method="_on_back_button_button_down"]
[connection signal="mouse_entered" from="Gameplay Select Screen/Back Button" to="Gameplay Select Screen/Back Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Gameplay Select Screen/Back Button" to="Gameplay Select Screen/Back Button" method="_on_mouse_exited"]
[connection signal="pressed" from="EnemySelectMenu/EnemyMenu-BackButton" to="." method="_on_enemy_menu_back_button_pressed"]
[connection signal="mouse_entered" from="EnemySelectMenu/Enemy Panel/Spritebox" to="EnemySelectMenu/Enemy Panel/AnimatedSprite2D" method="_on_spritebox_mouse_entered"]
[connection signal="mouse_exited" from="EnemySelectMenu/Enemy Panel/Spritebox" to="EnemySelectMenu/Enemy Panel/AnimatedSprite2D" method="_on_spritebox_mouse_exited"]
[connection signal="mouse_entered" from="Settings Menu/SettingsBackButton" to="Settings Menu/SettingsBackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Settings Menu/SettingsBackButton" to="Settings Menu/SettingsBackButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Settings Menu/SettingsBackButton" to="." method="_on_settings_back_button_pressed"]
[connection signal="value_changed" from="Settings Menu/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="mouse_entered" from="Settings Menu/Credits Button" to="Settings Menu/Credits Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Settings Menu/Credits Button" to="Settings Menu/Credits Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Settings Menu/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="Credits Menu/BackButton" to="Credits Menu/BackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Credits Menu/BackButton" to="Credits Menu/BackButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Credits Menu/BackButton" to="." method="_on_back_button_pressed"]
